# crystalclear

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  neo4j.py  security.py
backend/tests/: conftest.py
backend/tests/unit/: test_placeholder.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx
frontend/src/hooks/: .gitkeep
frontend/src/store/: .gitkeep
knowledge-base/adr/: 001-dual-database-strategy.md  002-temporal-graph-modeling.md
knowledge-base/agents/: agent-atlas.md  agent-bolt.md  agent-cipher.md  cross-check-workflow.md
knowledge-base/architecture/: api-contracts.md  data-model.md  system-overview.md  tech-stack.md
knowledge-base/conventions/: code-style.md  git-workflow.md  naming-conventions.md  testing-strategy.md
knowledge-base/domain/: entity-definitions.md  glossary.md  relationships.md
knowledge-base/sprints/: sprint-1-backlog.md
knowledge-base/sprints/tasks/: T-0101-us01-tests.md  T-0102-us01-implementation.md  T-0103-us01-review.md
knowledge-base/templates/: definition-of-done.md  task-briefing-template.md  user-story-template.md
